<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_products_pop"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorIcons"
    tools:context="com.example.verunex.wishlist.AddProductsPop">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:text="@string/add_product"
        android:textColor="@color/colorIcons"
        android:textSize="20dp"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:layout_gravity="center"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:layout_gravity="center">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/add_name_product"
            android:id="@+id/nameProduct"
            android:text="@string/add_name_product"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:layout_gravity="center">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/add_price_product"
            android:id="@+id/priceProduct"
            android:text="@string/add_price_product"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:layout_gravity="center">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:hint="@string/add_link_product"
            android:id="@+id/linkProduct"
            android:text="@string/add_link_product"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_product_confirm"
        android:textSize="17dp"
        android:textColor="@color/colorIcons"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textAllCaps="true"/>

</LinearLayout>
